feat(security): add RBAC roles and permissions foundation
Add V5 forward-only migration for base roles, permissions, user-role and role-permission mappings.

Refactor backend auth to use effective roles and permissions instead of a single role claim.

Update frontend auth, navigation and role management to support roles[] and permisos[].

Keep usuarios.rol_id for compatibility; removal is deferred to a future V6 migration.